--- a/index.html
+++ b/index.html
@@ -132,13 +132,61 @@
             text-decoration: underline;
         }
 
-        /* Add media queries for responsive design */
-        @media (max-width: 767px) {
+                /* Add media queries for responsive design */
+                /* For screens with a width of 1024px and higher (PC/laptop monitor, tablet in landscape) */
+        @media (min-width: 1024px) {
+            header {
+                padding: 40px 0; /* Reduce top and bottom padding for more space */
+            }
+
+            header #profile-photo {
+                width: 150px; /* Increase profile photo size */
+                height: 150px;
+            }
+        }
+
+        /* For screens with a width between 480px and 1023px (mobile landscape) */
+        @media (min-width: 480px) and (max-width: 1023px) {
+            header {
+                flex-direction: column; /* Stack elements vertically for mobile landscape */
+            }
+
+            header #profile-photo {
+                width: 100px; /* Adjust profile photo size for landscape */
+                height: 100px;
+                margin: 20px 0; /* Add space below the photo */
+            }
+
+            h1 {
+                text-align: center; /* Center align h1 */
+            }
+
             nav ul {
-                flex-direction: column;
+                flex-direction: column; /* Stack nav items vertically */
                 align-items: center;
             }
         }
+
+        /* For screens with a width of 320px to 479px (mobile portrait) */
+        @media (min-width: 320px) and (max-width: 479px) {
+            header #profile-photo {
+                width: 80px; /* Adjust profile photo size for portrait */
+                height: 80px;
+            }
+
+            nav ul {
+                margin-top: 20px; /* Add margin above nav items */
+            }
+
+            article {
+                padding: 10px; /* Reduce padding for mobile portrait */
+            }
+
+            .btn {
+                font-size: 14px; /* Reduce button font size for mobile portrait */
+            }
+        }
+
     </style>
 </head>
 <body>
